--- a/DScaler/Plugins/FLT_TemporalComb/FLT_TemporalComb2005.vcproj
+++ b/DScaler/Plugins/FLT_TemporalComb/FLT_TemporalComb2005.vcproj
@@ -75,7 +75,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="ole32.lib"
+				AdditionalDependencies="ole32.lib oleaut32.lib"
 				OutputFile="..\..\Debug/FLT_TemporalComb.dll"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
@@ -167,7 +167,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="ole32.lib"
+				AdditionalDependencies="ole32.lib oleaut32.lib"
 				OutputFile="..\..\Debug/FLT_TemporalComb.dll"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
@@ -262,7 +262,7 @@
 			<Tool
 				Name="VCLinkerTool"
 				IgnoreImportLibrary="true"
-				AdditionalDependencies="ole32.lib"
+				AdditionalDependencies="ole32.lib oleaut32.lib"
 				OutputFile="..\..\Release/FLT_TemporalComb.dll"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
@@ -355,7 +355,7 @@
 			<Tool
 				Name="VCLinkerTool"
 				IgnoreImportLibrary="true"
-				AdditionalDependencies="ole32.lib"
+				AdditionalDependencies="ole32.lib oleaut32.lib"
 				OutputFile="..\..\Release/FLT_TemporalComb.dll"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
