--- a/DScaler5/DMO/Deinterlace/Deint_Diag/Deint_Diag2005.vcproj
+++ b/DScaler5/DMO/Deinterlace/Deint_Diag/Deint_Diag2005.vcproj
@@ -79,7 +79,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="user32.lib advapi32.lib ole32.lib winspool.lib comdlg32.lib advapi32.lib shell32.lib ole32.lib oleaut32.lib uuid.lib odbc32.lib odbccp32.lib dmoguids.lib msdmo.lib strmiids.lib"
+				AdditionalDependencies="user32.lib advapi32.lib ole32.lib oleaut32.lib winspool.lib comdlg32.lib shell32.lib uuid.lib odbc32.lib odbccp32.lib dmoguids.lib msdmo.lib strmiids.lib"
 				OutputFile="..\..\..\Debug/Deint_Diag.dll"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
@@ -175,7 +175,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="user32.lib advapi32.lib ole32.lib winspool.lib comdlg32.lib advapi32.lib shell32.lib ole32.lib oleaut32.lib uuid.lib odbc32.lib odbccp32.lib dmoguids.lib msdmo.lib strmiids.lib"
+				AdditionalDependencies="user32.lib advapi32.lib ole32.lib oleaut32.lib winspool.lib comdlg32.lib shell32.lib uuid.lib odbc32.lib odbccp32.lib dmoguids.lib msdmo.lib strmiids.lib"
 				OutputFile="..\..\..\Release/Deint_Diag.dll"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
@@ -261,7 +261,7 @@
 					<Tool
 						Name="VCCustomBuildTool"
 						Description="$(InputName)"
-						CommandLine="nasmw -f win32 -o $(IntDir)\$(InputName).obj -p &quot;..\..\..\Common\DScaler.mac&quot; $(InputPath)&#x0D;&#x0A;"
+						CommandLine="nasm -f win32 -o $(IntDir)\$(InputName).obj -p &quot;..\..\..\Common\DScaler.mac&quot; $(InputPath)&#x0D;&#x0A;"
 						Outputs="$(IntDir)\$(InputName).obj"
 					/>
 				</FileConfiguration>
@@ -271,7 +271,7 @@
 					<Tool
 						Name="VCCustomBuildTool"
 						Description="$(InputName)"
-						CommandLine="nasmw -f win32 -o $(IntDir)\$(InputName).obj -p &quot;..\..\..\Common\DScaler.mac&quot; $(InputPath)&#x0D;&#x0A;"
+						CommandLine="nasm -f win32 -o $(IntDir)\$(InputName).obj -p &quot;..\..\..\Common\DScaler.mac&quot; $(InputPath)&#x0D;&#x0A;"
 						Outputs="$(IntDir)\$(InputName).obj"
 					/>
 				</FileConfiguration>
